feat: 리뷰 조회 API에 seat nullable하게 변경